# fit5226_project

./: .gitignore  FIT5226_assignment1_ Simple.ipynb  README.md  actions.py  agent.py  animation.py  assignment1.ipynb  dqn_agent_full_state.pth  dqn_agent_full_state_further_trained.pth  dqn_agent_full_state_new.pth  dqn_agent_state.pth  dqn_agent_state_final.pth  dqn_agent_state_truncated.pth  env.py  env_2.py  evaluation.py  execute.py  inference.py  pyproject.toml  run.py  state.py  test.py  trained_dqn_agent.pth
configs/: config.yml  eval_config.yml
final_checkpoints/2024-10-07_21-44-34-316970/: checkpoint.pt
notebooks/: FIT5226_assignment1_ Simple.ipynb  FIT5226_assignment1__Simple.ipynb  FIT5226_assignment1__Simple_final.ipynb  FIT5226_assignment2__Simple.ipynb  FIT5226_assignment2__Simple_Final.ipynb  error_analysis.ipynb
notebooks/a2/: FIT5226_assignment2__Simple.ipynb
scripts/: evaluate.py  finetune.py  hp_tune.py
src/fit5226_project/: actions.py  agent.py  env.py  evaluation.py  hyperparameterTune.py  metrics.py  plotter.py  replay_buffers.py  state.py  test.py  tracker.py  train.py  tuning.py  utils.py
tests/: test.py  test_env.py
trained_buffer/: dqn_agent_state_truncated_step35.pth  epsilon050_dqn_agent_state_truncated_step25.pth  epsilon050_dqn_agent_state_truncated_step30.pth  epsilon090_dqn_agent_state_truncated_step35.pth  epsilon090_dqn_agent_state_truncated_step40.pth  epsilon0997_dqn_agent_state_truncated_step25.pth  epsilon0997_dqn_agent_state_truncated_step30.pth  epsilon0997_dqn_agent_state_truncated_step40.pth
