[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fit5226_project"
version = "0.1.0"
dependencies = [
    "numpy",
    "matplotlib",
    "torch",
    "scipy",
    "tqdm",
    "mlflow",
    "PyYAML",
    "fire",
    "optuna",
    "ipykernel",
    "optuna-dashboard",
    "ruff",
]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
extend-select = ["I"]
